--- a/src/styles/Person.module.css
+++ b/src/styles/Person.module.css
@@ -17,7 +17,7 @@ border-radius: 20px;
     width: 340px;
     height: 100px;
     left: 0px;
-    top: 138px;
+    top: -5px;
     
     background: rgba(217, 217, 217, 0.3);
     border-radius: 0px 0px 20px 20px;
@@ -61,7 +61,7 @@ color: rgba(0, 0, 0, 0.4);
     position: relative;
 width: 183px;
 height: 15px;
-left: 80px;
+left: 90px;
 top: 200px;
 
 font-family: 'Noto Sans CJK KR';
@@ -73,4 +73,12 @@ line-height: 15px;
 
 color: rgba(0, 0, 0, 0.4);
 
+}
+
+.Img {
+    position: relative;
+    left: 120px;
+    top: 20px;
+width: 86px;
+height: 135px;
 }
