grand final log

--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -1,9 +1,9 @@
-body {
-    background-image: url(../assets/images/login/rectangle_grad.png);
+/* body {
+    background-image: url(../assets/images/login/home.png);
     
     background-repeat: no-repeat;
     background-position: top center;
     background-size: cover;
   }
 
-  
+   */
