--- a/src/styles/SolutionPage.module.css
+++ b/src/styles/SolutionPage.module.css
@@ -88,7 +88,7 @@ border-radius: 10px;
     position: relative;
 width: 269px;
 height: 44px;
-left: 130px;
+left: 160px;
 top: 60px;
 
 font-family: 'Noto Sans CJK KR';
@@ -104,8 +104,8 @@ color: #000000;
     position: absolute;
     width: 269px;
     height: 44px;
-    left: 230px;
-    top: 560px;
+    left: 170px;
+    top: 885px;
     
     font-family: 'Noto Sans CJK KR';
     font-style: normal;
@@ -126,4 +126,12 @@ color: #000000;
 
 .WellBox {
     padding: 15px;
+}
+
+.NotGrid{
+    position: relative;
+    left: 20px;
+    top: -400px;
+    display: flex;
+    justify-content: space-evenly;
 }
